--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>&copy; 2025 Livia AI. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://x.com/LiviaAI_" target="_blank">Twitter</a>
-                <a href="https://t.me/LiviaAI_Official" target="_blank">Telegram</a>
+                <a href="https://t.me/PumpFun_Livia" target="_blank">Telegram</a>
                 <a href="https://liviaai.github.io/" target="_blank">Official Website</a>
             </div>
         </div>
