--- a/index.html
+++ b/index.html
@@ -1,64 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livia AI Token</title>
+    <title>Token Profilleri</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Stil eklemeleri */
-        .status {
-            font-size: 20px;
-            font-weight: bold;
-            margin: 20px 0;
-        }
-        .status.running {
-            color: green;
-        }
-        .status.stopped {
-            color: red;
-        }
-        .bot-actions {
-            margin-top: 20px;
-        }
-        .bot-actions button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .bot-actions button:hover {
-            background-color: #45a049;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="image-slider">
-            <img id="slider-img" src="livia1.png" alt="Livia AI Image">
-        </div>
+    <header>
+        <h1>Token Profilleri</h1>
+        <p>Yeni token profilleri aşağıda listelenecektir.</p>
+    </header>
 
-        <div class="content-container"> <!-- Yeni konteynır eklendi -->
-            <div class="content">
-                <p>We instantly share coins with 100% King of the Hill progress on Pump.fun in the Telegram group below.</p>
-                <a href="https://t.me/PumpFun_Livia" target="_blank">
-                    <button>Join Telegram</button>
-                </a>
-            </div>
-        </div> <!-- Content-container sonu -->
+    <main id="token-list">
+        <!-- Token profilleri burada sıralanacak -->
+    </main>
 
-        <div class="footer">
-            <p>&copy; 2025 Livia AI. All rights reserved.</p>
-            <div class="social-links">
-                <a href="https://x.com/LiviaAI_" target="_blank">Twitter</a>
-                <a href="https://t.me/PumpFun_Livia" target="_blank">Telegram</a>
-                <a href="https://liviaai.github.io/" target="_blank">Official Website</a>
-            </div>
-        </div>
-    </div>
+    <footer>
+        <p>Powered by DEX Screener API</p>
+    </footer>
 
     <script src="scripts.js"></script>
 </body>
