--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <p>Powered by DEX Screener API</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
