--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token Profilleri</title>
+    <title>Token Profiles</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Token Profilleri</h1>
-        <p>Yeni token profilleri aşağıda listelenecektir.</p>
+        <h1>Latest Token Profiles</h1>
+        <p>Explore the latest tokens added to the platform.</p>
     </header>
 
     <main id="token-list">
-        <!-- Token profilleri burada sıralanacak -->
+        <!-- Token profiles will be listed here -->
     </main>
 
     <footer>
