--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <body>
 
     <header>
+        <a href="https://www.buy-token.com" target="_blank" class="buy-token">BUY TOKEN</a>
         <h1>Live Token Profiles</h1>
         <p>Explore the latest tokens from multiple blockchains</p>
     </header>
 
     <main>
-        <div id="loading" class="loading">Loading...</div> <!-- Yükleme göstergesi -->
-
-        <div id="token-list" class="token-list"> <!-- Token'lar burada listelenecek -->
+        <div id="token-list" class="token-list">
             <!-- Token'lar buraya eklenip görselleştirilecek -->
         </div>
     </main>
