--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Token Explorer. All rights reserved.</p>
+        <p>&copy; 2025 Livia AI. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script> <!-- JS dosyasını bağlayacağız -->
