--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Live Token Profiles</h1>
+        <h1>Newly Released Tokens</h1>
         <p>Explore the latest tokens from multiple blockchains</p>
     </header>
 
