--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <header>
         <h1>Newly Released Tokens</h1>
-        <p>Explore the latest tokens from multiple blockchains</p>
+        <p>Explore the latest tokens released from multiple blockchains using the Dexscreener API. Powered by <strong>Livia AI</strong>.</p>
     </header>
+
 
     <main>
         <div id="token-list" class="token-list">
