--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Newly Released Tokens</h1>
-        <p>Explore the latest tokens released from multiple blockchains using the Dexscreener API. Powered by <strong>Livia AI</strong>.</p>
+        <p>Explore the latest tokens released from multiple blockchains using the Dexscreener API.</p>
     </header>
 
 
